advanced templating using partials of handlebars to reuse certain parts of the page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-  <h1>{{title}}</h1>
-  <p>{{text}}</p>
+  {{>header}}
+  <img src="./images/220px-Nyan_cat_250px_frame.png" alt="nyan cat" />
+  {{>footer}}
 </body>
 
 </html>
