--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/styles.css" />
+  <script src="./js/app.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-  <h1>{{title}}</h1>
-  <img src="./images/220px-Nyan_cat_250px_frame.png" alt="nyan cat" />
-  <p>Created by {{name}}</p>
+  {{>header}}
+  {{>footer}}
 </body>
 
 </html>
