--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <title>Document</title>
+  <title>About</title>
 </head>
 
 <body>
-  {{>header}}
-  <img src="./images/220px-Nyan_cat_250px_frame.png" alt="nyan cat" />
+  <div class="main-content">
+    {{>header}}
+    <img class="portrait" src="./images/220px-Nyan_cat_250px_frame.png" alt="nyan cat" />
+  </div>
   {{>footer}}
 </body>
 
