--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <title>Document</title>
+  <title>Help</title>
 </head>
 
 <body>
-  {{>header}}
-  <p>{{text}}</p>
+  <div class="main-content">
+    {{>header}}
+    <p>{{text}}</p>
+  </div>
   {{>footer}}
 </body>
 
