--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,11 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/styles.css" />
   <script src="./js/app.js"></script>
-  <title>Document</title>
+  <title>Weather</title>
 </head>
 
 <body>
-  {{>header}}
+  <div class="main-content">
+    {{>header}}
+    <p>Use this site to get yout wheather</p>
+  </div>
   {{>footer}}
 </body>
 
