--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <script src="./js/app.js"></script>
   <title>Weather</title>
 </head>
 
@@ -14,8 +13,17 @@
   <div class="main-content">
     {{>header}}
     <p>Use this site to get yout wheather</p>
+
+    <form action="">
+      <input type="text" placeholder="Location">
+      <button>Search</button>
+    </form>
+    <p id="message-1"></p>
+    <p id="message-2"></p>
   </div>
   {{>footer}}
+
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
